# yournotify-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic.py
tests/: test_import.py
yournotify/: __init__.py  client.py
