[build-system]
requires=["setuptools>=61"]
build-backend="setuptools.build_meta"

[project]
name="yournotify-python"
version="0.1.0"
description="Python SDK for the current Yournotify API"
readme="README.md"
requires-python=">=3.9"
dependencies=["requests>=2.31.0"]
authors=[{name="Yournotify"}]
license={text="MIT"}

[tool.setuptools.packages.find]
include=["yournotify*"]
